--- a/policy.html
+++ b/policy.html
@@ -80,77 +80,36 @@
 
         <!-- Starting my Account section -->
         <div class=" container my-account mt-5">
-            <h1 class="mt-4 text-center" style="color: #F8A421;">حسابي</h1>
-            <div class="row mt-5 a-bg-white shadow-lg rounded">
-                <div class="col-md-6 mt-5 mb-5">
-                    <div class="a-border-left">
-                        <div class="a-bg w-75 py-5 a-img-container">
-                            <div class="my-3">
-                                <img class="mx-auto d-block w-25" src="./imgs/account.png" alt="">
-                                <h4 class="text-center">باسم محمود</h4>
-                                <h5 class="text-center">+0 233012 4234</h5>
-                                <h5 class="text-center">info@company.com</h5>
-                                <button class="btn-dark btn-lg mx-auto d-block"> تعيدل الملف الشخصي</button>
-                            </div>
-                        </div>
+            <h1 class="mt-4 text-center" style="color: #F8A421;">سياسة الخصوصية</h1>
+            <div class="row mt-5 a-bg-light-2 shadow rounded">
+                <div class="col-12">
+                    <div class="">
+                        <p class="m-5" style="font-size: large; line-height: 2.5rem;">
+                            هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على
+                            الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم
+                            إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً عن استخدام "هنا يوجد محتوى نصي،
+                            هنا يوجد محتوى نصي" فتجعلها تبدو (أي الأحرف) وكأنها نص مقروء. العديد من برامح النشر المكتبي
+                            وبرامح تحرير صفحات الويب تستخدم لوريم إيبسوم بشكل إفتراضي كنموذج عن النص، وإذا قمت بإدخال
+                            "lorem ipsum" في أي محرك بحث ستظهر العديد من المواقع الحديثة العهد في نتائج البحث. على مدى
+                            السنين ظهرت نسخ جديدة ومختلفة من نص لوريم إيبسوم، أحياناً عن طريق الصدفة، وأحياناً عن عمد
+                            كإدخال بعض العبارات الفكاهية إليها.                            هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على
+                            الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم
+                            إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً عن استخدام "هنا يوجد محتوى نصي،
+                            هنا يوجد محتوى نصي" فتجعلها تبدو (أي الأحرف) وكأنها نص مقروء. العديد من برامح النشر المكتبي
+                            وبرامح تحرير صفحات الويب تستخدم لوريم إيبسوم بشكل إفتراضي كنموذج عن النص، وإذا قمت بإدخال
+                            "lorem ipsum" في أي محرك بحث ستظهر العديد من المواقع الحديثة العهد في نتائج البحث. على مدى
+                            السنين ظهرت نسخ جديدة ومختلفة من نص لوريم إيبسوم، أحياناً عن طريق الصدفة، وأحياناً عن عمد
+                            كإدخال بعض العبارات الفكاهية إليها.                            هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على
+                            الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم
+                            إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً عن استخدام "هنا يوجد محتوى نصي،
+                            هنا يوجد محتوى نصي" فتجعلها تبدو (أي الأحرف) وكأنها نص مقروء. العديد من برامح النشر المكتبي
+                            وبرامح تحرير صفحات الويب تستخدم لوريم إيبسوم بشكل إفتراضي كنموذج عن النص، وإذا قمت بإدخال
+                            "lorem ipsum" في أي محرك بحث ستظهر العديد من المواقع الحديثة العهد في نتائج البحث. على مدى
+                            السنين ظهرت نسخ جديدة ومختلفة من نص لوريم إيبسوم، أحياناً عن طريق الصدفة، وأحياناً عن عمد
+                            كإدخال بعض العبارات الفكاهية إليها.
+                        </p>
                     </div>
-                </div>
-                <div class="col-md-6 mt-5 pl-2">
-                    <div class="ml-4">
-                        <div class="account ">
-                            <div class="acc-short a-bg float-left p-3 rounded m-1 text-center">
-                                <i class="fas fa-shopping-bag"></i>
-                            </div>
-                            <div class="acc-long a-bg-light float-left p-3 rounded m-1">
 
-                                <a href="my-orders.html">
-                                    <span class="mt-3 mx-3">طلباتي</span>
-                                    <span class="badge badge-pill badge-light mt-1">5</span>
-                                    <i class="fas fa-angle-left float-right mt-3"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="clear"></div>
-                        <div class="account">
-                            <div class="acc-short a-bg float-left p-3 rounded m-1 text-center">
-                                <i class="far fa-question-circle"></i>
-                            </div>
-                            <div class="acc-long a-bg-light float-left p-3 rounded m-1">
-
-                                <a href="policy.html">
-                                    <span class="mt-3 mx-3">سياسة الخصوصية</span>
-                                    <i class="fas fa-angle-left float-right mt-3"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="clear"></div>
-                        <div class="account">
-                            <div class="acc-short a-bg float-left p-3 rounded m-1 text-center">
-                                <i class="fas fa-headphones-alt"></i>
-                            </div>
-                            <div class="acc-long a-bg-light float-left p-3 rounded m-1">
-
-                                <a href="contact-with.html">
-                                    <span class="mt-3 mx-3">التواصل مع المسؤلين</span>
-                                    <i class="fas fa-angle-left float-right mt-3"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="clear"></div>
-                        <div class="account">
-                            <div class="acc-short a-bg float-left p-3 rounded m-1 text-center ">
-                                <i class="far fa-lightbulb"></i>
-                            </div>
-                            <div class="acc-long a-bg-light float-left p-3 rounded m-1">
-
-                                <a href="terms.html">
-                                    <span class="mt-3 mx-3">الشروط والأحكام</span>
-                                    <i class="fas fa-angle-left float-right mt-3"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="clear"></div>
-                    </div>
                 </div>
             </div>
         </div>
