--- a/favorite.html
+++ b/favorite.html
@@ -85,10 +85,10 @@
             <div class="row">
                 <div class="col-md-6 ">
                     <div class="row rounded a-bg-light-2 w-98 mt-5">
-                        <div class="col-6">
-                            <img class="p-2 mx-auto d-block" width="90%" src="./imgs/Buffalo.png" alt="">
+                        <div class="col-4">
+                            <img class="mx-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
                         </div>
-                        <div class="col-6 ">
+                        <div class="col-8 ">
                             <div class="a-border-right">
                                 <button class="btn float-right bg-light rounded-circle"><i
                                         class="far fa-trash-alt text-center"></i></button>
@@ -117,10 +117,10 @@
                 </div>
                 <div class="col-md-6 ">
                     <div class="row rounded a-bg-light-2 w-98 mt-5">
-                        <div class="col-6">
-                            <img class="p-2 mx-auto d-block" width="90%" src="./imgs/Buffalo.png" alt="">
+                        <div class="col-4">
+                            <img class="mx-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
                         </div>
-                        <div class="col-6 ">
+                        <div class="col-8 ">
                             <div class="a-border-right">
                                 <button class="btn float-right bg-light rounded-circle"><i
                                         class="far fa-trash-alt text-center"></i></button>
@@ -149,10 +149,10 @@
                 </div>
                 <div class="col-md-6 ">
                     <div class="row rounded a-bg-light-2 w-98 mt-5">
-                        <div class="col-6">
-                            <img class="p-2 mx-auto d-block" width="90%" src="./imgs/Buffalo.png" alt="">
+                        <div class="col-4">
+                            <img class="mx-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
                         </div>
-                        <div class="col-6 ">
+                        <div class="col-8 ">
                             <div class="a-border-right">
                                 <button class="btn float-right bg-light rounded-circle"><i
                                         class="far fa-trash-alt text-center"></i></button>
@@ -181,10 +181,10 @@
                 </div>
                 <div class="col-md-6 ">
                     <div class="row rounded a-bg-light-2 w-98 mt-5">
-                        <div class="col-6">
-                            <img class="p-2 mx-auto d-block" width="90%" src="./imgs/Buffalo.png" alt="">
+                        <div class="col-4">
+                            <img class="mx-auto d-block mt-5" width="100%" src="./imgs/Buffalo.png" alt="">
                         </div>
-                        <div class="col-6 ">
+                        <div class="col-8 ">
                             <div class="a-border-right">
                                 <button class="btn float-right bg-light rounded-circle"><i
                                         class="far fa-trash-alt text-center"></i></button>
