--- a/index.html
+++ b/index.html
@@ -19,32 +19,37 @@
         <div class="a-right-mask">
             <img src="./imgs/Mask Group 11.png" alt="Mask" class="a-right-mask-img">
         </div>
-        <nav class="navbar navbar-expand-md a-nav">
+        <nav class="navbar navbar-expand-lg a-nav">
             <!-- Brand/logo -->
             <a class="navbar-brand" href="index.html">
-                <img src="imgs/logo-2.png" alt="logo" style="width:100px;">
+                <img src="imgs/main-logo.png" alt="logo" style="width:120px;">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler a-main" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                القائمة <i class="fas fa-align-justify"></i>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
 
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">الرئيسية</a>
+                    <li class="nav-item a-active">
+                        <a class="nav-link " href="index.html">الرئيسية</a>
+                        <span></span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">من نحن</a>
+                        <span></span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="products.html">المنتجات</a>
+                        <span></span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="offers.html">العروض</a>
+                        <span></span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">اتصل بنا</a>
+                        <span></span>
                     </li>
                 </ul>
                 <div class="a-right-nav">
