Update all pages footer

--- a/my-orders.html
+++ b/my-orders.html
@@ -303,12 +303,12 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6 ">
                             <div class="bg-light a-img-container py-4 w-100">
-                                <img class="w-60 mx-auto d-block img-fluid" src="./imgs/logo.png" alt="">
+                                <img class="w-48 mx-auto d-block img-fluid" src="./imgs/logo.png" alt="">
                             </div>
                         </div>
                         <div class="col-md-8 col-sm-6">
                             <div class="a-img-container a-bg ">
-                                <div class="row" style="height: 270px;">
+                                <div class="row" style="height: 220px;">
                                     <div class="col-md-6  my-auto ">
                                         <img class="w-60 float-right align-middle img-fluid" src="./imgs/Play Store.png"
                                             alt="">
@@ -326,18 +326,19 @@
 
         <div class=" container-fluid a-dark-bg mt-5 a-sent">
             <div class="row h-100 ">
-                <div class="col-md-5 col-sm-6 my-auto">
-                    <div class="row">
-                        <div class="col-md-4 my-auto">
-                            <img class="w-50 w-50-sm mx-auto d-block img-fluid" src="./imgs/invite.png" alt="">
+                <div class="col-md-5 col-sm-5 my-auto">
+                    <div class="">
+                        <div class="float-left mr-4">
+                            <img class="" width="50px" src="./imgs/invite.png" alt="">
                         </div>
-                        <div class="col-md-8 my-auto">
+                        <div class="float-left mr-3">
                             <h4 class="text-white">لإرسال احدث العروض</h4>
                             <p class="text-white">ادخل بريدك الاكتروني</p>
                         </div>
+                        <div class="clear"></div>
                     </div>
                 </div>
-                <div class="col-md-7 col-sm-6 my-auto">
+                <div class="col-md-7 col-sm-7 my-auto">
                     <form class="form-inline" action="">
                         <input type="email" class="form-control w-50 form-control-lg" id="email"
                             placeholder="البريد الالكتروني..." name="email">
@@ -349,9 +350,8 @@
 
         <div class="footer mt-5">
             <div class="container-fluid">
-                <!-- <img class="w-100 a-footer-mask " src="./imgs/footer.png" alt=""> -->
                 <div class="row mt-5">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-lg-3 ">
                         <div class="a-img-logo pt-5 mt-3">
                             <img class="w-50 mx-auto d-block pt-5 img-fluid" src="./imgs/logo-2.png" alt="">
                             <div class="line mt-3">
@@ -387,11 +387,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-9 col-lg-6">
                         <div class="row">
-                            <div class="col-md-3">
-                                <div class="menu">
-                                    <ul class="nav">
+                            <div class="col-md-3 col-sm-4">
+                                <div class="menu v-c">
+                                    <ul class="nav ">
                                         <li class="nav-item">
                                             <a class="nav-link a-footer-link" href="#">الرئيسية</a>
                                         </li>
@@ -407,8 +407,8 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-5">
-                                <div class="second-menu">
+                            <div class="col-md-5 col-sm-4 ">
+                                <div class="second-menu v-c">
                                     <ul class="nav">
                                         <li class="nav-item">
                                             <a class="nav-link a-footer-link" href="#">حسابي</a>
@@ -423,8 +423,8 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="contact-menu">
+                            <div class="col-md-4 col-sm-4">
+                                <div class="contact-menu v-c">
                                     <ul class="nav">
                                         <li class="nav-item">
                                             <a class="nav-link a-eng-font a-footer-link" href="#">
@@ -445,7 +445,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-lg-3">
                         <div class="a-map">
                             <img class="map-img mx-auto d-block img-fluid" src="./imgs/Google-Maps.png" alt="">
                         </div>
@@ -453,6 +453,7 @@
                 </div>
 
             </div>
+            <div class="footer-bg-bg"></div>
         </div>
         <div class="row">
             <h4 class="mx-auto a-copy mt-2">Copyright &copy; 2020 khayrat Al Reem </h4>
