--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-rtl.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="../demo/css/styles.css"> -->
 
@@ -51,8 +52,19 @@
                         <a class="nav-link" href="contact.html">اتصل بنا</a>
                         <span></span>
                     </li>
+                     <!--  -->
+                     <li class="nav-item a-collapsed">
+                        <a class="nav-link a-footer-link" href="#">المفضلة</a>
+                    </li>
+                    <li class="nav-item a-collapsed">
+                        <a class="nav-link a-footer-link" href="#">سلة التسوق</a>
+                    </li>
+                    <li class="nav-item a-collapsed">
+                        <a class="nav-link a-footer-link" href="#">حسابي</a>
+                    </li>
+                    <!--  -->
                 </ul>
-                <div class="a-right-nav">
+                <div class="a-right-nav ">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <div class="btn mr-2 rounded-circle btn-lg a-bg-light">
@@ -122,7 +134,7 @@
         <div class="about">
             <div class="row">
                 <div class="col-md-7">
-                    <div class="btn a-bg a-left-round w-25 ">
+                    <div class="btn a-bg a-left-round w-30 ">
                         <h3> <a href="" class="a-link">من نحن</a> </h3>
                     </div>
                     <div>
@@ -134,7 +146,7 @@
                             وبرامح تحرير صفحات الويب تستخدم لوريم إيبسوم بشكل إفتراضي كنموذج عن النص،
                         </h5>
                     </div>
-                    <div class="btn a-bg w-25">
+                    <div class="btn a-bg w-30">
                         <h5><a href="" class="a-link"> رؤية المزيد </a></h5>
                     </div>
                 </div>
@@ -148,12 +160,12 @@
         <!-- Etarting Tow photo section -->
         <div class="Photos mt-5">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 mt-xs-5 mt-sm-5">
                     <div class="photo-continer">
                         <img class="w-100" src="./imgs/noble_cow.png" alt="">
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mt-xs-5 mt-sm-5">
                     <div class="photo-continer">
                         <img class="w-100" src="./imgs/photo1.png" alt="">
                     </div>
@@ -183,12 +195,12 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6 ">
                             <div class="bg-light a-img-container py-4 w-100">
-                                <img class="w-60 mx-auto d-block img-fluid" src="./imgs/logo.png" alt="">
+                                <img class="w-48 mx-auto d-block img-fluid" src="./imgs/logo.png" alt="">
                             </div>
                         </div>
                         <div class="col-md-8 col-sm-6">
                             <div class="a-img-container a-bg ">
-                                <div class="row" style="height: 270px;">
+                                <div class="row" style="height: 220px;">
                                     <div class="col-md-6  my-auto ">
                                         <img class="w-60 float-right align-middle img-fluid" src="./imgs/Play Store.png"
                                             alt="">
@@ -206,18 +218,19 @@
 
         <div class=" container-fluid a-dark-bg mt-5 a-sent">
             <div class="row h-100 ">
-                <div class="col-md-5 col-sm-6 my-auto">
-                    <div class="row">
-                        <div class="col-md-4 my-auto">
-                            <img class="w-50 w-50-sm mx-auto d-block img-fluid" src="./imgs/invite.png" alt="">
+                <div class="col-md-5 col-sm-5 my-auto">
+                    <div class="">
+                        <div class="float-left mr-4">
+                            <img class="" width="50px" src="./imgs/invite.png" alt="">
                         </div>
-                        <div class="col-md-8 my-auto">
+                        <div class="float-left mr-3">
                             <h4 class="text-white">لإرسال احدث العروض</h4>
                             <p class="text-white">ادخل بريدك الاكتروني</p>
                         </div>
+                        <div class="clear"></div>
                     </div>
                 </div>
-                <div class="col-md-7 col-sm-6 my-auto">
+                <div class="col-md-7 col-sm-7 my-auto">
                     <form class="form-inline" action="">
                         <input type="email" class="form-control w-50 form-control-lg" id="email"
                             placeholder="البريد الالكتروني..." name="email">
@@ -229,9 +242,8 @@
 
         <div class="footer mt-5">
             <div class="container-fluid">
-                <!-- <img class="w-100 a-footer-mask " src="./imgs/footer.png" alt=""> -->
                 <div class="row mt-5">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-lg-3 ">
                         <div class="a-img-logo pt-5 mt-3">
                             <img class="w-50 mx-auto d-block pt-5 img-fluid" src="./imgs/logo-2.png" alt="">
                             <div class="line mt-3">
@@ -267,11 +279,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-9 col-lg-6">
                         <div class="row">
-                            <div class="col-md-3">
-                                <div class="menu">
-                                    <ul class="nav">
+                            <div class="col-md-3 col-sm-4">
+                                <div class="menu v-c">
+                                    <ul class="nav ">
                                         <li class="nav-item">
                                             <a class="nav-link a-footer-link" href="#">الرئيسية</a>
                                         </li>
@@ -287,8 +299,8 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-5">
-                                <div class="second-menu">
+                            <div class="col-md-5 col-sm-4 ">
+                                <div class="second-menu v-c">
                                     <ul class="nav">
                                         <li class="nav-item">
                                             <a class="nav-link a-footer-link" href="#">حسابي</a>
@@ -303,8 +315,8 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="contact-menu">
+                            <div class="col-md-4 col-sm-4">
+                                <div class="contact-menu v-c">
                                     <ul class="nav">
                                         <li class="nav-item">
                                             <a class="nav-link a-eng-font a-footer-link" href="#">
@@ -325,7 +337,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-lg-3">
                         <div class="a-map">
                             <img class="map-img mx-auto d-block img-fluid" src="./imgs/Google-Maps.png" alt="">
                         </div>
@@ -333,6 +345,7 @@
                 </div>
 
             </div>
+            <div class="footer-bg-bg"></div>
         </div>
         <div class="row">
             <h4 class="mx-auto a-copy mt-2">Copyright &copy; 2020 khayrat Al Reem </h4>
