--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="AR">
 
 <head>
     <meta charset="UTF-8">
@@ -11,21 +11,23 @@
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="../demo/css/styles.css"> -->
-
     <title>خيرات الريم</title>
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="a-right-mask">
-            <img src="./imgs/Mask Group 11.png" alt="Mask" class="a-right-mask-img">
+            <img src="./imgs/right-mask.png" alt="Mask" class="a-right-mask-img">
+        </div>
+        <div class="a-left-mask">
+            <img src="./imgs/left-mask.png" alt="Mask" class="a-left-mask-img">
         </div>
         <nav class="navbar navbar-expand-lg a-nav">
             <!-- Brand/logo -->
             <a class="navbar-brand" href="index.html">
                 <img src="imgs/main-logo.png" alt="logo" style="width:120px;">
             </a>
-            <button class="navbar-toggler a-main" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 القائمة <i class="fas fa-align-justify"></i>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -54,13 +56,13 @@
                     </li>
                      <!--  -->
                      <li class="nav-item a-collapsed">
-                        <a class="nav-link a-footer-link" href="#">المفضلة</a>
+                        <a class="nav-link " href="favorite.html">المفضلة</a>
                     </li>
                     <li class="nav-item a-collapsed">
-                        <a class="nav-link a-footer-link" href="#">سلة التسوق</a>
+                        <a class="nav-link " href="cart.html">سلة التسوق</a>
                     </li>
                     <li class="nav-item a-collapsed">
-                        <a class="nav-link a-footer-link" href="#">حسابي</a>
+                        <a class="nav-link " href="account.html">حسابي</a>
                     </li>
                     <!--  -->
                 </ul>
@@ -81,7 +83,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <div class="btn mr-2 a-right-round btn-lg a-bg">
+                            <div class="btn mr-2 a-right-round btn-lg a-bg" style="width: 170px;">
                                 <a class="a-bg" href="./account.html">
                                     <i class="far fa-user-circle"></i>
                                     <span class="px-2">حسابى</span>
