--- a/contact-with.html
+++ b/contact-with.html
@@ -8,6 +8,7 @@
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-rtl.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="../demo/css/styles.css"> -->
 
@@ -17,37 +18,53 @@
 <body>
     <div class="container-fluid">
         <div class="a-right-mask">
-            <img src="./imgs/Mask Group 11.png" alt="Mask" class="a-right-mask-img">
+            <img src="./imgs/right-mask.png" alt="Mask" class="a-right-mask-img">
         </div>
-        <nav class="navbar navbar-expand-md a-nav">
+        <nav class="navbar navbar-expand-lg a-nav">
             <!-- Brand/logo -->
             <a class="navbar-brand" href="index.html">
-                <img src="imgs/logo-2.png" alt="logo" style="width:100px;">
+                <img src="imgs/main-logo.png" alt="logo" style="width:120px;">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                القائمة <i class="fas fa-align-justify"></i>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
 
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">الرئيسية</a>
+                    <li class="nav-item a-active">
+                        <a class="nav-link " href="index.html">الرئيسية</a>
+                        <span></span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">من نحن</a>
+                        <span></span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="products.html">المنتجات</a>
+                        <span></span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="offers.html">العروض</a>
+                        <span></span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">اتصل بنا</a>
+                        <span></span>
                     </li>
+                     <!--  -->
+                     <li class="nav-item a-collapsed">
+                        <a class="nav-link " href="favorite.html">المفضلة</a>
+                    </li>
+                    <li class="nav-item a-collapsed">
+                        <a class="nav-link " href="cart.html">سلة التسوق</a>
+                    </li>
+                    <li class="nav-item a-collapsed">
+                        <a class="nav-link " href="account.html">حسابي</a>
+                    </li>
+                    <!--  -->
                 </ul>
-                <div class="a-right-nav">
+                <div class="a-right-nav ">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <div class="btn mr-2 rounded-circle btn-lg a-bg-light">
@@ -64,7 +81,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <div class="btn mr-2 a-right-round btn-lg a-bg">
+                            <div class="btn mr-2 a-right-round btn-lg a-bg" style="width: 170px;">
                                 <a class="a-bg" href="./account.html">
                                     <i class="far fa-user-circle"></i>
                                     <span class="px-2">حسابى</span>
