--- a/index.html
+++ b/index.html
@@ -182,6 +182,59 @@
         </div>
         <!-- Ending Product Section -->
 
+        <!-- starting products section  -->
+
+        <div class="container">
+
+            <div class="row a-bg-light-2 rounded shadow py-5">
+                <div class="col-12"><h2 class="text-center">المنتجات</h2></div>
+                <div class="col-md-3">
+                    <a href="">
+                        <div class="mx-auto a-img-container bg-light mt-5" style="width: 90%; ">
+                            <img class="w-100 mx-auto d-block p-5" src="./imgs/Buffalo.png" alt="">
+                            <button class="btn a-bg w-100 a-btn-offers">
+                                <h4>عجل بلدي</h4>
+                            </button>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="">
+                        <div class="mx-auto a-img-container bg-light mt-5" style="width: 90%; ">
+                            <img class="w-100 mx-auto d-block p-5" src="./imgs/Buffalo.png" alt="">
+                            <button class="btn a-bg w-100 a-btn-offers">
+                                <h4>عجل بلدي</h4>
+                            </button>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="">
+                        <div class="mx-auto a-img-container bg-light mt-5" style="width: 90%; ">
+                            <img class="w-100 mx-auto d-block p-5" src="./imgs/Buffalo.png" alt="">
+                            <button class="btn a-bg w-100 a-btn-offers">
+                                <h4>عجل بلدي</h4>
+                            </button>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="">
+                        <div class="mx-auto a-img-container bg-light mt-5" style="width: 90%; ">
+                            <img class="w-100 mx-auto d-block p-5" src="./imgs/Buffalo.png" alt="">
+                            <button class="btn a-bg w-100 a-btn-offers">
+                                <h4>عجل بلدي</h4>
+                            </button>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 text-center mt-4">
+                    <button class="btn a-bg-white btn-lg d-block mx-auto my-4 w-25">
+                        رؤية المزيد
+                    </button></div>
+            </div>
+        </div>
+
 
         <div class=" mt-5 mb-5">
             <div class="row">
