--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                         </li>
                         <li class="nav-item">
                             <button class="btn mr-2 a-right-round btn-lg a-bg " data-toggle="modal"
-                                data-target="#myModal" style="width: 170px;">
+                                data-target="#myModal" style="width: 210px;">
                                 <a class="a-bg" href="">
                                     <i class="far fa-user-circle"></i>
-                                    <span class="px-2">حسابى</span>
+                                    <span class="px-2" >تسجيل الدخول</span>
                                 </a>
                             </button>
 
