--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                     <li class="nav-item a-collapsed">
                         <a class="nav-link " href="cart.html">سلة التسوق</a>
                     </li>
-                    <li class="nav-item a-collapsed">
-                        <a class="nav-link " href="account.html">حسابي</a>
-                    </li>
+                    <li class="nav-item a-collapsed" data-toggle="modal"
+                    data-target="#myModal">
+                        <span class="nav-link">تسجيل الدخول</span>
+                </li>
                     <!--  -->
                 </ul>
                 <div class="a-right-nav ">
