update some links

--- a/confirm.html
+++ b/confirm.html
@@ -166,7 +166,9 @@
                 </div>
 
                 <div class="col-12 mt-5">
-                    <button class=" btn a-bg a-img-container btn-lg w-100"> متابعة </button>
+                    <a href="./confirm-addres.html">
+                        <button class=" btn a-bg a-img-container btn-lg w-100"> متابعة </button>
+                    </a>
                 </div>
             </div>
 
