--- a/product.html
+++ b/product.html
@@ -308,7 +308,9 @@
 
                 <div class="row mt-5">
                     <div class="col-md-6">
+                       <a href="confirm.html">
                         <button class="btn a-bg w-100 btn-lg confirm"> تأكيد وتنفيذ الطلب</button>
+                       </a>
                     </div>
                     <div class="col-md-6">
                         <button class="btn bg-dark w-100 cancel">
