--- a/products.html
+++ b/products.html
@@ -99,7 +99,7 @@
         <div class="Offers container">
             <div class="row">
                 <div class="col-md-4">
-                    <a href="">
+                    <a href="product.html">
                         <div class="mx-auto a-img-container bg-light mt-5" style="width: 90%; ">
                             <img class="w-100 mx-auto d-block p-5" src="./imgs/Buffalo.png" alt="">
                             <button class="btn a-bg w-100 a-btn-offers">
@@ -109,7 +109,7 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="">
+                    <a href="product.html">
                         <div class="mx-auto a-img-container bg-light mt-5" style="width: 90%;">
                             <img class="w-100 mx-auto d-block p-5" src="./imgs/sheep-png-images-1 (1).png" alt="">
                             <button class="btn a-bg w-100 a-btn-offers">
