--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                         <li class="nav-item">
                             <button class="btn mr-2 a-right-round btn-lg a-bg " data-toggle="modal"
                                 data-target="#myModal" style="width: 210px;">
-                                <a class="a-bg" href="">
+                                <span class="a-bg">
                                     <i class="far fa-user-circle"></i>
                                     <span class="px-2" >تسجيل الدخول</span>
-                                </a>
+                                </span>
                             </button>
 
                         </li>
