update product.html - +

--- a/product.html
+++ b/product.html
@@ -160,12 +160,15 @@
                             <div class="a-bg-light rounded h-100">
                                 <h5 class=" p-3">الكمية</h5>
                                 <div class="form-group w-75 mx-auto">
-                                    <select class="form-control" id="" name="sellist1">
-                                        <option>صغير
-                                            <span> 800.00 ريال</span>
-                                        </option>
-                                        <option>كبير</option>
-                                    </select>
+                                    <div class="btn-group rounded-right" style="background-color: white;">
+                                        <button class="btn  a-btn-add">
+                                            <i class="fas fa-plus-circle"></i>
+                                        </button>
+                                        <span class="btn a-btn-add mx-2 text-secondary">2</span>
+                                        <button class="btn a-btn-add ">
+                                            <i class="fas fa-minus-circle"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -237,12 +240,15 @@
                             <div class="a-bg-light rounded h-100">
                                 <h5 class=" p-3">لحم مفروم </h5>
                                 <div class="form-group w-75 mx-auto">
-                                    <select class="form-control" id="" name="sellist1">
-                                        <option>صغير
-                                            <span> 800.00 ريال</span>
-                                        </option>
-                                        <option>كبير</option>
-                                    </select>
+                                    <div class="btn-group rounded-right" style="background-color: white;">
+                                        <button class="btn  a-btn-add">
+                                            <i class="fas fa-plus-circle"></i>
+                                        </button>
+                                        <span class="btn a-btn-add mx-2 text-secondary">2kg </span>
+                                        <button class="btn a-btn-add ">
+                                            <i class="fas fa-minus-circle"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
